# pgadmin-rs

./: .dockerignore  .env.example  .gitignore  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_SETUP.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DOCKER.md  Dockerfile  FINAL_STATUS.md  Makefile  PROGRESS.md  QUICK_START_TESTING.md  README.md  REMAINING_WORK.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SUMMARY.md  SETUP.md  TESTING.md  TEST_SUMMARY.md  UNIT_TESTS_SUMMARY.md  build.js  build.rs  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
issues/: 00-project-overview.md  01-architecture-and-tech-stack.md  02-backend-foundation.md  03-database-connectivity.md  04-security-and-authentication.md  05-core-features.md  06-ui-ux-implementation.md  07-docker-setup.md  08-testing-and-quality.md
migrations/: README.md
scripts/: init-db.sh  setup-test-db.sh
src/: http_tests.rs  main.rs  routes_tests.rs  security_tests.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/middleware/: mod.rs  rate_limit.rs  security_headers.rs
src/models/: mod.rs  tests.rs
src/routes/: auth.rs  cell.rs  database.rs  export.rs  mod.rs  query.rs  schema.rs  schema_ops.rs  stats.rs  studio.rs  table_view.rs  tables.rs
src/services/: audit_service.rs  cell_service.rs  database_service.rs  db_service.rs  export_service.rs  mod.rs  query_history.rs  query_service.rs  schema_ops_service.rs  schema_service.rs  stats_service.rs
static/css/: main.css  style.css
static/js/: app.js  theme.js
templates/: base.html  browser.html  dashboard.html  index.html  query.html  studio.html  table-view-content.html  table-view.html
templates/components/: cache-stats.html  cell-display.html  (+20 more)
tests/: integration_test.rs
(+3 files in other folders)
